# extract-enel-sftp

./: .gitignore  Base_mes_Efetividade.py  README.md  dataframe_efetividade_da_leitura.py  enel_sftp.py  pyproject.toml  requirements.txt  sftp_extractor.py  sftp_teste.py  sftp_teste_2.py
src/extract_enel_sftp/: __init__.py  cli.py  config.py  extractor.py  logging_config.py  sftp_client.py  vpn.py
src/extract_enel_sftp/etl/: __init__.py  efetividade.py
src/extract_enel_sftp/processing/: __init__.py  ordens_filhas.py
src/extract_enel_sftp/tools/: __init__.py  sftp_password.py  sftp_password_regex.py
